--- a/docs/report.tex
+++ b/docs/report.tex
@@ -604,7 +604,7 @@ The time complexity of Flash Sort base on choosing value $m$.
 For example, if $m$ is chosen proportional to $\sqrt n$, the time complexity is $O(n^{3/2})$.
 In this paper, I chose $0.45$ for $m$.
 \newline
-Space complexity: $O(1)$
+Space complexity: $O(m)$
 
 \section{Experimental results}
 All the eleven sorting algorithms were implemented in C++ programming language and tested on six input of lenght 10000,
